# effective-limits.rs

./: Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: centos-fmt-clippy-on-all.yaml  linux-builds-on-master.yaml  linux-builds-on-pr.yaml  linux-builds-on-stable.yaml  macos-builds-on-all.yaml  publish.yaml  windows-builds-on-master.yaml  windows-builds-on-pr.yaml  windows-builds-on-stable.yaml
ci/: README.md  fetch-rust-docker.bash  raw_init.sh  run.bash
ci/actions-templates/: centos-fmt-clippy-template.yaml  linux-builds-template.yaml  macos-builds-template.yaml  windows-builds-template.yaml
ci/docker/aarch64-unknown-linux-gnu/: Dockerfile
ci/docker/android/: Dockerfile
ci/docker/riscv64gc-unknown-linux-gnu/: Dockerfile
ci/docker/x86_64-unknown-linux-musl/: Dockerfile
examples/: memory.rs
src/: lib.rs
