[package]
name = "effective-limits"
version = "0.5.4"
authors = ["Robert Collins <robertc@robertcollins.net>"]
edition = "2018"
description = "Estimate effective resource limits for a process e.g. how much RAM is available for use."
repository = "https://github.com/rbtcollins/effective-limits.rs"
readme = "README.md"
categories = ["config", "memory-management"]
keywords = ["mem", "limits", "effective", "resource"]
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if="0.1.10"
thiserror = "1.0.20"

[target.'cfg(any(windows, target_os="macos", target_os="linux", target_os="freebsd", target_os="illumos", target_os="solaris", target_os="netbsd"))'.dependencies]
sys-info = "0.9.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.78"


[target."cfg(windows)".dependencies]
winapi = {version = "0.3.9",    features = [
    "combaseapi",
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "impl-default",
    "ioapiset",
    "jobapi",
    "jobapi2",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "shlobj",
    "shtypes",
    "synchapi",
    "sysinfoapi",
    "tlhelp32",
    "userenv",
    "winbase",
    "winerror",
    "winioctl",
    "winnt",
    "winuser",
    ]}
