[package]
authors = ["Robert Collins <robertc@robertcollins.net>"]
categories = ["config", "memory-management"]
description = "Estimate effective resource limits for a process e.g. how much RAM is available for use."
edition = "2018"
keywords = ["mem", "limits", "effective", "resource"]
license = "Apache-2.0"
name = "effective-limits"
readme = "README.md"
repository = "https://github.com/rbtcollins/effective-limits.rs"
version = "0.5.5"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
thiserror = "1.0.37"

[target.'cfg(any(windows, target_os="macos", target_os="linux", target_os="freebsd", target_os="illumos", target_os="solaris", target_os="netbsd"))'.dependencies]
sys-info = "0.9.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.137"


[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = [
    "combaseapi",
    "errhandlingapi",
    "fileapi",
    "handleapi",
    "impl-default",
    "ioapiset",
    "jobapi",
    "jobapi2",
    "minwindef",
    "processthreadsapi",
    "psapi",
    "shlobj",
    "shtypes",
    "synchapi",
    "sysinfoapi",
    "tlhelp32",
    "userenv",
    "winbase",
    "winerror",
    "winioctl",
    "winnt",
    "winuser",
] }
